[tool.poetry]
name = "custom-utilities"
version = "0.1.0"
description = ""
authors = ["american-pie <20cestlavie1703@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
